--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -2,10 +2,15 @@
     <string name="app_name">BlackJack</string>
     <string name="action_settings">Settings</string>
     <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
+    <string name="welcome_menu">Welcome Menu</string>
     <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
+    <string name="play">Play</string>
+    <string name="blackjack">BLACKJACK</string>
+    <string name="insert_player_name">Insert a username</string>
+    <string name="username">Username</string>
+    <string name="insert_code">Insert playroom ID</string>
+    <string name="playroom_code">code</string>
+    <string name="enter">Enter</string>
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
