--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -1,17 +1,16 @@
 <resources>
     <string name="app_name">BlackJack</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_logged_in">Authenticated</string>
     <!-- Strings used for fragments for navigation -->
     <string name="welcome_menu">Welcome Menu</string>
     <string name="second_fragment_label">Second Fragment</string>
-    <string name="play">Play</string>
+    <string name="login">Login with G</string>
+    <string name="enter_room">Join room</string>
+    <string name="create_room">Create room</string>
     <string name="blackjack">BLACKJACK</string>
-    <string name="insert_player_name">Insert a username</string>
-    <string name="username">Username</string>
     <string name="insert_code">Insert playroom ID</string>
     <string name="playroom_code">code</string>
-    <string name="enter">Enter</string>
+    <string name="join">Join</string>
 
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 </resources>
