--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -24,5 +24,6 @@
     <string name="balance">Balance:</string>
     <string name="opponents_turn">Opponent turn</string>
     <string name="back_to_menu">Back to menu</string>
+    <string name="share_this_code_with_a_friend">Share this code with a friend</string>
 
 </resources>
